; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_box/curve25519xsalsa20poly1305/extr_box_curve25519xsalsa20poly1305.c_crypto_box_curve25519xsalsa20poly1305_beforenm.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_box/curve25519xsalsa20poly1305/extr_box_curve25519xsalsa20poly1305.c_crypto_box_curve25519xsalsa20poly1305_beforenm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crypto_box_curve25519xsalsa20poly1305_beforenm.zero = internal constant [16 x i8] zeroinitializer, align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_box_curve25519xsalsa20poly1305_beforenm(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca [32 x i8], align 16
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = getelementptr inbounds [32 x i8], [32 x i8]* %8, i64 0, i64 0
  %10 = load i8*, i8** %7, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i64 @crypto_scalarmult_curve25519(i8* %9, i8* %10, i8* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %19

15:                                               ; preds = %3
  %16 = load i8*, i8** %5, align 8
  %17 = getelementptr inbounds [32 x i8], [32 x i8]* %8, i64 0, i64 0
  %18 = call i32 @crypto_core_hsalsa20(i8* %16, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @crypto_box_curve25519xsalsa20poly1305_beforenm.zero, i64 0, i64 0), i8* %17, i32* null)
  store i32 %18, i32* %4, align 4
  br label %19

19:                                               ; preds = %15, %14
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i64 @crypto_scalarmult_curve25519(i8*, i8*, i8*) #1

declare dso_local i32 @crypto_core_hsalsa20(i8*, i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
